--- a/server/config/config.env
+++ b/server/config/config.env
@@ -2,3 +2,14 @@ PORT=4000
 
 FRONTEND_URL=http://localhost:5713
 MONGO_URL=mongodb://127.0.0.1:27017
+
+
+SMTP_HOST = smtp.gmail.com
+
+SMTP_SERVICE = gmail
+
+SMTP_PORT = 465
+
+SMTP_MAIL = pintukumar918833@gmail.com
+
+SMTP_PASSWORD  =  fblm popi isoz myfc  
